all elements in, issue with card spillover

--- a/style.css
+++ b/style.css
@@ -3,27 +3,41 @@
 	padding: 0;
 }
 
+body {
+	background: black;
+}
+
 #page_wrapper {
 	width: 100%;
 	height: 2036px;
-	background: black;
 }
 
 #topnav {
 	width: 100%;
-	height: 50px;
+	height: 60px;
 	display: block;
 	position: fixed;
+	margin-top: 50px; 
 	background: grey;
 	opacity: 0.9;
 	color: white;
-	z-index: 1;
+	z-index: 1; 
+}
+
+#eyecon {
+	width: 132px;
+	height: 131px;
+	padding-right: 10px;
+	display: block;
+	float: left;
+	background: url('images/eyecon.png') no-repeat;
+	transform: translateY(-29%);
+    -webkit-transform: translateY(-29%);
 }
 
 ul {
 	list-style-type: none;
 	height: 100%;
-	overflow: hidden;
 }
 
 	
@@ -35,12 +49,13 @@ li {
 
 li a {
 	height: 100%;
-	width: 55px;
-	padding: 12px;
+	width: 60px;
+	padding: 18px 12px 0px 12px;
 	text-decoration: none;
 	text-align: center;
 	color: white;
 	display: block;
+	font-size: 1.1em;
 }
 
 li a:hover {
@@ -49,7 +64,7 @@ li a:hover {
 }
 
 #bodywrapper {
-	width: 90%;
+	width: 1353px;
 	height: 100%;
 	margin: auto;
 	background: url('images/bg_full.jpg') no-repeat top left;
@@ -69,7 +84,7 @@ li a:hover {
 
 #card a:hover {
 	background: url('images/checkmark.png') top left no-repeat;
-	background-size: contain;
+	background-size: contain; 
 }
 
 #hand {
@@ -112,20 +127,101 @@ li a:hover {
     opacity: 0.7;
 }
 
+#spillwrapper {
+	height: 100%;
+	width: 1353px;
+	overflow-x: hidden !important;
+}
+
+#spillover {
+	height: 398px;
+	width: 172px;
+	position: absolute;
+	right: -172px;
+    bottom: 372px;
+	background: url('images/cardspillover.png') no-repeat;
+}
+
 #section_two {
 	width: 100%;
-	height: 50%
-	;
+	height: 50%;
+}
+
+#polaroids {
+	height: 880px;
+	width: 550px;
+	float: left;
+	position: relative;
+}
+
+#polaroid1 {
+	width: 556px;
+	height: 569px;
+	background: url('images/polaroid1.png') top left no-repeat;
+	position: absolute;
+	top: 0;
+	right: 0;
+}
+
+#polaroid2 {
+	width: 530px;
+	height: 545px;
+	background: url('images/polaroid2.png') top left no-repeat;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+}
+
+#notes {
+	height: 880px;
+	width: 757px;
+	background: url('images/papers.png') no-repeat;
+	float: left;
+	position: relative;
+}
+
+#notetext {
+	transform: rotate(6deg);
+    -webkit-transform: rotate(6deg);
+    margin-top: 182px;
+    margin-left: 388px;
+}
+
+#notes a {
+	text-decoration: none;
+	color: black;
+	font-size: 2em;
+}
+
+#notes a:hover {
+	color: blue;
+}
+
+#notelink2 {
+	position: absolute;
+	bottom: -449px;
+    right: 190px;
 }
 
 #footer {
 	width: 100%;
-	height: 100px;
+	height: 130px;
 	background: grey;
 	color: white;
 }
 
+#googlemap {
+	width: 298px;
+	height: 97px;
+	padding: 15px;
+	display: block;
+	float: left;
+	background: url('images/googmap.png') center no-repeat;
+}
+
 #footer > p {
+	width: 22%;
+	padding: 18px;
 	display: inline-block;
 	float: left;
 }
